[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu/MainMenu/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 266.0
margin_right = 96.0
margin_bottom = 334.0
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="LevelSelect" type="Button" parent="Content"]
margin_right = 89.0
margin_bottom = 20.0
text = "Level Select"

[node name="Options" type="Button" parent="Content"]
margin_top = 24.0
margin_right = 89.0
margin_bottom = 44.0
text = "Options"

[node name="Quit" type="Button" parent="Content"]
margin_top = 48.0
margin_right = 89.0
margin_bottom = 68.0
text = "Quit"

[node name="OptionsPopup" type="PopupPanel" parent="."]
margin_left = 474.0
margin_top = 272.0
margin_right = 549.0
margin_bottom = 328.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 71.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundSettings" type="HBoxContainer" parent="OptionsPopup/VBoxContainer"]
margin_right = 67.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="OptionsPopup/VBoxContainer/SoundSettings"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Sound"

[node name="CheckBox" type="CheckBox" parent="OptionsPopup/VBoxContainer/SoundSettings"]
margin_left = 43.0
margin_right = 67.0
margin_bottom = 24.0

[node name="Done" type="Button" parent="OptionsPopup/VBoxContainer"]
margin_top = 28.0
margin_right = 67.0
margin_bottom = 48.0
text = "Done"
[connection signal="pressed" from="Content/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="Content/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Content/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="OptionsPopup/VBoxContainer/Done" to="." method="_on_Done_pressed"]
